--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,7 @@
 <ion-content>
-  <h2>Olá mundo!</h2>
+  
+  <ion-item class="header" color="primary" lines="none">
+    <ion-label class="header-title">Tarefas</ion-label>
+  </ion-item>
+  
 </ion-content>
