--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,11 @@
 <ion-content>
-  
-  <ion-item class="header" color="primary" lines="none">
-    <ion-label class="header-title">Tarefas</ion-label>
-  </ion-item>
-  
+  <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col size-lg="6" offset-lg="3">
+        <ion-item class="header" color="primary" lines="none">
+          <ion-label class="header-title">Tarefas</ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
