--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,6 +5,10 @@
         <ion-item class="header" color="primary" lines="none">
           <ion-label class="header-title">Tarefas</ion-label>
         </ion-item>
+
+        <ion-item class="container" lines="none">
+          <ion-input clearInput placeholder="Ex. Tomar vacina"></ion-input>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
