Adicionando botão para cadastrar tarefas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,12 @@
         </ion-item>
 
         <ion-item class="container" lines="none">
+          <ion-buttons slot="start">
+            <ion-button>
+              <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+            </ion-button>
+          </ion-buttons>
+
           <ion-input clearInput placeholder="Ex. Tomar vacina"></ion-input>
         </ion-item>
       </ion-col>
