--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,16 @@
 
           <ion-input clearInput placeholder="Ex. Tomar vacina"></ion-input>
         </ion-item>
+
+        <ion-list class="container" lines="none">
+          <ion-item *ngIf="tasks.length === 0">
+            <ion-label class="ion-text-center">Oba, minha lista de tarefas está vazia!</ion-label>
+          </ion-item>
+
+          <ion-item *ngFor="let task of tasks">
+            {{ task }}
+          </ion-item>
+        </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
