Refatorando o componente Home para que ele use o model Task

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,7 @@
           </ion-item>
 
           <ion-item *ngFor="let task of tasks">
-            {{ task }}
+            {{ task.name }}
           </ion-item>
         </ion-list>
       </ion-col>
