Exibindo o status de uma tarefa

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -18,6 +18,10 @@
   border-radius: 20px;
 }
 
+.task-done {
+  text-decoration: line-through;
+}
+
 ion-content {
   --background: var(--ion-color-light);  
 }
