--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -22,7 +22,9 @@
           </ion-item>
 
           <ion-item *ngFor="let task of tasks">
-            {{ task.name }}
+            <ion-label [ngClass]="{'task-done' : task.isDone}">
+              {{ task.name }}
+          </ion-label>
           </ion-item>
         </ion-list>
       </ion-col>
