Adicionando uma nova tarefa

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,12 +8,17 @@
 
         <ion-item class="container" lines="none">
           <ion-buttons slot="start">
-            <ion-button>
+            <ion-button (click)="addTask()">
               <ion-icon slot="icon-only" name="add-outline"></ion-icon>
             </ion-button>
           </ion-buttons>
 
-          <ion-input clearInput placeholder="Ex. Tomar vacina"></ion-input>
+          <ion-input 
+            clearInput 
+            placeholder="Ex. Tomar vacina"
+            [(ngModel)]="taskName"
+            (keyup.enter)="addTask()"
+            ></ion-input>
         </ion-item>
 
         <ion-list class="container" lines="none">
