--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -44,6 +44,10 @@
 
           </ion-item>
         </ion-list>
+
+        <ion-item color="light" lines="none">
+          <ion-label class="ion-text-center">© {{ today | date:'yyyy' }} Tarefas - v1.0 | Sobre</ion-label>
+        </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
