--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+
+a {
+  text-decoration: none;
+}
