--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,9 +2,7 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-lg="6" offset-lg="3">
-        <ion-item class="header" color="primary" lines="none">
-          <ion-label class="header-title">Tarefas</ion-label>
-        </ion-item>
+        <app-header></app-header>
 
         <ion-item class="container" lines="none">
           <ion-buttons slot="start">
