--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <ion-item class="header" color="primary" lines="none">
-  <ion-label class="header-title">Tarefas</ion-label>
+  <ion-label class="header-title">{{ title }}</ion-label>
 </ion-item>
