Corrigindo bug na atualização de tarefas e adicionando autofocus

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,6 +13,7 @@
 
           <ion-input
             clearInput
+            #taskInput
             placeholder="Ex. Tomar vacina"
             [(ngModel)]="taskName"
             (keyup.enter)="addTask()"
