Configurando autofocus para o input de tarefas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
 
           <ion-input
             clearInput
-            #taskInput
+            #autofocus
             placeholder="Ex. Tomar vacina"
             [(ngModel)]="taskName"
             (keyup.enter)="addTask()"
