--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -2,7 +2,7 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size-lg="6" offset-lg="3">
-        <app-header title="Sobre"></app-header>
+        <app-header title="About"></app-header>
 
         <ion-item lines="none" color="light">
           <ion-back-button defaultHref="home"></ion-back-button>
@@ -13,8 +13,7 @@
 
           <ion-label class="ion-text-wrap">
             <h2>
-              <strong>Tarefas</strong> é um aplicativo web simples para
-              gerenciar sua lista de tarefas.
+              <strong>ARESTApp</strong> is a really simple app to help you managing your tasks list.
             </h2>
           </ion-label>
         </ion-item>
@@ -24,14 +23,14 @@
 
           <ion-label class="ion-text-wrap">
             <a href="https://github.com/dcc-ufla/tarefas" target="_blank"
-              >Código fonte</a
+              >Source code</a
             >
           </ion-label>
         </ion-item>
 
         <ion-list class="container" lines="none">
           <ion-item-divider>
-            <ion-label>Desenvolvedores</ion-label>
+            <ion-label>Developers</ion-label>
           </ion-item-divider>
 
           <ion-item>
@@ -48,7 +47,7 @@
                 >
               </h2>
 
-              <p>UFLA</p>
+              <p>Creator</p>
             </ion-label>
           </ion-item>
         </ion-list>
