Change source code URL

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -22,7 +22,7 @@
           <ion-icon slot="start" name="logo-github"></ion-icon>
 
           <ion-label class="ion-text-wrap">
-            <a href="https://github.com/dcc-ufla/tarefas" target="_blank"
+            <a href="https://github.com/pauloafpjunior/arestapp" target="_blank"
               >Source code</a
             >
           </ion-label>
